experimentation to fix flickering issue

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -7,7 +7,7 @@ body {
 	padding: 0;
 	margin: 0;
 	text-align: center;
-	/*user-select: none;*/
+	user-select: none;
 }
 
 #headerContainer {
@@ -112,6 +112,7 @@ body {
 	border-style: solid;
 	border-width: 6px;
 	border-color: black;
+	-webkit-tap-highlight-color: none;
 }
 
 .circle:hover {
